# harfbuzz

./: .clang-format  .collect_logs  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AVAR2-INSTANCING.md  Android.mk  BUILD.gn  BUILD.md  CMakeLists.txt  CMakeLists.txt.in  CODE_OF_AI_CONDUCT.md  CONFIG.md  COPYING  HarfBuzz.heif  Makefile  Makefile.am  Makefile.in  NEWS  P  README  README.md  README.mingw.md  README.python  README.python.md  README.wine.md  RELEASING.md  SECURITY.md  TESTING.md  TODO  a-clustering-example-for-levels-0-and-1.html  aclocal.m4  adding-text-to-the-buffer.html  annotation-glossary.html  api-index-0-9-10.html  api-index-0-9-11.html  api-index-0-9-2.html  (+111 more)
msvcport/: CMakeLists.txt  config.h
perf/: Makefile.am  README.md  benchmark-font.cc  benchmark-gpu.cc  benchmark-map.cc  benchmark-ot.cc  benchmark-set.cc  benchmark-shape.cc  benchmark-subset.cc  hb-benchmark.hh  hb-draw-all.c  hb-draw-compare  hb-svg-compare  meson.build  perf-draw.hh  perf-extents-bench.cc  perf-extents.hh  perf-shaping-bench.cc  perf-shaping.hh  perf.cc  run.sh
perf/text/: littleprince.txt  test-long-arabic-paragraph.txt
perf/texts/: duployan.txt  en-2letters.txt  en-paragraph.txt  en-words.txt  fa-monologue.txt
src/: .cvsignore  .gitignore  ArabicPUATraditional.txt  COPYING  Cargo.toml  FT-license.txt  Makefile  Makefile.am  Makefile.ng  Makefile.sources  README  TODO  build-js.sh  check-c-linkage-decls.py  check-c-linkage-decls.sh  check-defs.sh  check-exported-symbols.sh  check-externs.py  check-externs.sh  check-header-guards.py  check-header-guards.sh  check-includes.py  check-includes.sh  check-internal-symbols.sh  check-libstdc++.py  check-libstdc++.sh  check-static-inits.py  check-static-inits.sh  check-symbols.py  check-symbols.sh  check_helpers.py  deploy-js.sh  dev-run.sh  disasm.c  disasm.h  dump-emoji.cc  dump-fon.cc  dump-glyphs.cc  dump-khmer-data.cc  dump-text.cc  (+777 more)
src/fasthash/: fasthash.cc
src/fontations/: Cargo.toml  lib.rs  meson.build
src/graph/: classdef-graph.hh  coverage-graph.hh  graph.hh  gsubgpos-context.cc  gsubgpos-context.hh  gsubgpos-graph.cc  gsubgpos-graph.hh  ligature-graph.hh  markbasepos-graph.hh  pairpos-graph.hh  serialize.hh  split-helpers.hh  test-classdef-graph.cc
src/graphite2/: .gitattributes  .gitignore  CMakeLists.txt  COPYING  Graphite.cmake  LICENSE  graphite2.pc.in
src/hb-icu-le/: COPYING  FontTableCache.cpp  FontTableCache.h  Makefile.am  PortableFontInstance.cpp  PortableFontInstance.h  README  cmaps.cpp  cmaps.h  letest.h  sfnt.h
src/hb-old/: COPYING  Makefile.am  Makefile.in  README  harfbuzz-arabic.c  harfbuzz-buffer.c  harfbuzz-buffer.h  harfbuzz-external.h  harfbuzz-gdef-private.h  harfbuzz-gdef.h  harfbuzz-global.h  harfbuzz-gpos-private.h  harfbuzz-gpos.c  harfbuzz-greek.c  harfbuzz-gsub-private.h  harfbuzz-gsub.h  harfbuzz-hebrew.c  harfbuzz-impl.h  harfbuzz-indic.cpp  harfbuzz-khmer.c  harfbuzz-myanmar.c  harfbuzz-open.h  harfbuzz-shaper-private.h  harfbuzz-shaper.cpp  harfbuzz-shaper.h  harfbuzz-stream.h  harfbuzz-thai.c  harfbuzz-tibetan.c
src/hb-ucdn/: Makefile.am  Makefile.sources  README  ucdn.c  ucdn.h  ucdn_db.h  unicodedata_db.h
src/js-connector/: connector.coffee  hb-js.coffee
src/ms-use/: IndicPositionalCategory-Additional.txt  IndicSyllabicCategory-Additional.txt
src/rust/: Cargo.toml  font.rs  lib.rs  meson.build  shape.rs
src/wasm-graphite/: Makefile  shape.cc
src/wasm-sample/: Makefile  addTable.py  shape-fallback.cc  shape-ot.cc  shape.c
test/: CMakeLists.txt  Makefile.am  Makefile.decl  hb-test.h  meson.build  test-blob.c  test-buffer.c  test-c.c  test-common.c  test-cplusplus.cc  test-font.c  test-object.c  test-ot-tag.c  test-shape-complex.c  test-shape.c  test-types.c  test-unicode.c
test/api/: CMakeLists.txt  Makefile.am  hb-subset-test.h  hb-test.h  meson.build  test-aat-layout.c  test-base-minmax.c  test-baseline.c  test-be-glyph-advance.c  test-be-num-glyphs.c  test-be-subset-tables.c  test-blob.c  test-buffer.c  test-c.c  test-collect-unicodes.c  test-common.c  test-coretext.c  test-cplusplus.cc  test-directwrite.cc  test-draw-varc.c  test-draw.c  test-draw.cc  test-extents.c  test-face.c  test-font.c  test-ft.c  test-get-table-tags.c  test-glyph-contour-point.c  test-glyph-names.c  test-gpu.cc  test-instance-cff2.c  test-map.c  test-multithread.c  test-object.c  test-ot-alternates.c  test-ot-collect-glyphs.c  test-ot-color.c  test-ot-depend.c  test-ot-extents-cff.c  test-ot-face.c  (+50 more)
test/draw/: README.md  hb-draw-all.c  hb-draw-compare  hb-svg-compare  meson.build  record-test.sh  run-tests.py
test/fuzzing/: CMakeLists.txt  Makefile.am  README  README.md  clusterfuzz-testcase-minimized-hb-subset-fuzzer-6461128124465152  decode-seed.py  glob.py  hb-depend-closure-parity-main.cc  hb-depend-closure-parity.cc  hb-depend-fuzzer.cc  hb-draw-fuzzer.cc  hb-fuzzer.cc  hb-fuzzer.hh  hb-gpu-fuzzer.cc  hb-intoverflow-fuzzer.cc  hb-raster-fuzzer.cc  hb-repacker-fuzzer.cc  hb-set-fuzzer.cc  hb-shape-fuzzer.cc  hb-shape-input.hh  hb-subset-fuzzer.cc  hb-subset-get-codepoints-fuzzer.cc  hb-vector-fuzzer.cc  main.cc  (+11 more)
util/: Makefile.am  Makefile.sources  ansi-print.cc  ansi-print.hh  batch.hh  common.cc  common.hh  deserialize-consumer.hh  draw-output-color.hh  draw-output.hh  face-options.hh  font-options.hh  generate-unicode-ranges.py  gpu-output.hh  hb-cairo-utils.c  hb-cairo-utils.h  hb-compare-shapers.cc  hb-diff  hb-draw.cc  hb-fc-list.c  hb-fc.cc  hb-fc.h  hb-ft-raster-all.cc  hb-ft-raster.cc  hb-gpu-demo.cc  hb-gpu-encode-all.cc  hb-gpu.cc  hb-info.cc  hb-ot-shape-closure.cc  hb-paint-all.c  hb-raster-all.cc  hb-raster-gpu-all.cc  hb-raster.cc  hb-render.cc  hb-sanitize.cc  hb-shape.cc  hb-sm3-bench.cc  hb-subset-depend.cc  hb-subset.cc  hb-test.c  (+34 more)
win32/: Makefile.am  Makefile.vc  README.txt  build-rules-msvc.mak  config-msvc.mak  config.h.win32.in  create-lists-msvc.mak  create-lists.bat  detectenv-msvc.mak  generate-msvc.mak  hb-introspection-msvc.mak  info-msvc.mak  install.mak  introspection-msvc.mak  replace.py  sed-enums-srcs.py  setup.py
(+2312 files in other folders)
